--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "description": "Annotate any webpage with Excalidraw",
   "permissions": ["activeTab", "storage"],
+  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "src/popup/popup.html",
     "default_icon": "icons/icon48.png"
