--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,6 +9,7 @@
     "default_popup": "src/popup/popup.html",
     "default_icon": "icons/icon48.png"
   },
+  "options_page": "src/options/guide.html",
   "background": {
     "service_worker": "src/background/service-worker.ts",
     "type": "module"
